# jobsearch

./: .gitignore  README.md  pyproject.toml
src/jobsearch/: __init__.py  ai.py  app.py  folder_manager.py  google_drive.py  prompts.py  web_visitor.py
src/jobsearch/ai/: gemini.py  prompts.py  schema.py  validator.py
src/jobsearch/scrapper/: browser.py  manager.py
src/jobsearch/scrapper/plugins/: __init__.py  careers.py
src/jobsearch/storage/: repo.py
tests/: test_file_repo.py  test_folder_manager.py  test_gemini.py
tests/data/: job_description1.txt
