[project]
name = "jobsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saoud Salah Eddine", email = "saoudcoding@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
jobsearch = "jobsearch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
